# rss2json

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config.json
