[tool.poetry]
name = "rss2json"
version = "0.1.0"
description = ""
authors = ["maguowei <imaguowei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.2"

[tool.poetry.dev-dependencies]
chalice = "^1.22.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
